--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "concurrently": "^7.6.0",
     "express": "^4.18.2",
     "jest": "^29.3.1",
+    "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
@@ -14,9 +15,14 @@
     "winston": "^3.8.2"
   },
   "devDependencies": {
+    "@babel/cli": "^7.20.7",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.5",
     "@types/node": "^18.11.18",
+    "@types/request": "^2.48.8",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "eslint": "^8.31.0",
@@ -24,14 +30,14 @@
     "prettier": "^2.8.1"
   },
   "scripts": {
-    "build": "rimraf dist && npx tsc",
+    "build": "rimraf dist && npx babel src --out-dir dist && npx tsc",
     "prestart": "npm run build",
     "start": "node dist/index.js",
     "preserve": "npm run build",
     "serve": "concurrently \"npx tsc -w\"  \"nodemon dist/index.js\"",
     "watch": "jest --watch",
-    "covarage" : "jest --coverage",
-    "test" : "jest"
+    "covarage": "jest --coverage",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
