--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "test desc",
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.2.2",
     "concurrently": "^7.6.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.3.1",
     "request": "^2.88.2",
